# controllers/transactionController.js
@@ -32,21 +32,14 @@ class TransactionController {
         !passengerDetails ||
         seats.length === 0 ||
         passengerDetails.length === 0
-      ) {
+      )
+      {
         return next(new AppError("Invalid input", 400));
       }
 
-      if (
-        seats.length < passengerDetails.length ||
-        seats.length > passengerDetails.length * 2
-      ) {
-        return next(
-          new AppError(
-            "Invalid input: Jumlah kursi tidak sesuai dengan jumlah penumpang",
-            400
-          )
-        );
-      }
+      if (seats.length < passengerDetails.length || seats.length > passengerDetails.length * 2) {
+        return next(new AppError("Invalid input: Jumlah kursi tidak sesuai dengan jumlah penumpang", 400));
+    }
 
       const availableSeats = await prisma.seat.findMany({
         where: {
@@ -227,7 +220,7 @@ class TransactionController {
   static async handleMidtransCallback(req, res, next) {
     try {
       const { order_id, transaction_status, fraud_status } = req.body;
-
+  
       let newStatus;
       switch (transaction_status) {
         case "pending":
@@ -246,7 +239,7 @@ class TransactionController {
           newStatus = "Cancelled";
           break;
       }
-
+  
       // Transaction update
       const transaction = await prisma.transaction.update({
         where: { bookingCode: order_id },
@@ -255,31 +248,31 @@ class TransactionController {
           paymentMethod: req.body.payment_type,
         },
       });
-
+  
       // Jika transaksi dibatalkan (expired/cancel)
       if (newStatus === "Cancelled") {
         // Kembalikan seat menjadi available
         await prisma.seat.updateMany({
-          where: {
+          where: { 
             Ticket: {
               some: {
-                transactionId: transaction.id,
-              },
-            },
+                transactionId: transaction.id
+              }
+            }
           },
-          data: {
-            available: true,
-          },
+          data: { 
+            available: true 
+          }
         });
-
+  
         // Hapus tiket terkait
         await prisma.ticket.deleteMany({
-          where: {
-            transactionId: transaction.id,
-          },
+          where: { 
+            transactionId: transaction.id 
+          }
         });
       }
-
+  
       // Jika transaksi berhasil
       if (newStatus === "Issued") {
         await prisma.ticket.updateMany({
@@ -293,7 +286,7 @@ class TransactionController {
           },
         });
       }
-
+  
       res.status(200).send("OK");
     } catch (error) {
       console.error("Midtrans callback error:", error);
@@ -354,15 +347,12 @@ class TransactionController {
           return next(new AppError("Invalid departure date", 400));
         }
 
-        // Menggunakan departureTime untuk memfilter penerbangan
         query.Tickets = {
           some: {
             seat: {
               flight: {
-                departureTime: {
-                  // Pastikan ini sesuai dengan model Anda
+                departureDate: {
                   gte: parsedDate,
-                  lt: new Date(parsedDate.getTime() + 24 * 60 * 60 * 1000), // Mencakup seluruh hari
                 },
               },
             },
@@ -437,13 +427,8 @@ class TransactionController {
       }
 
       if (transaction.status !== "Issued") {
-        return next(
-          new AppError(
-            "Tickets can only be printed if the transaction status is 'Issued'",
-            400
-          )
-        );
-      }
+        return next(new AppError("Tickets can only be printed if the transaction status is 'Issued'", 400));
+    }
 
       const tickets = transaction.Tickets || [];
       if (tickets.length === 0) {
