# routes/seatRoutes.js
@@ -4,5 +4,10 @@ const { asyncErrorHandler } = require("../middleware/errorMiddleware");
 const SeatController = require("../controllers/seatController");
 
 router.get("/detail-flight", asyncErrorHandler(SeatController.getDetailFlight));
+router.get("/", SeatController.getAllSeats);
+router.get("/:id", SeatController.getSeatById);
+router.post("/", SeatController.createSeat);
+router.put("/:id", SeatController.updateSeat);
+router.delete("/:id", SeatController.deleteSeat);
 
 module.exports = router;
